Arrow on IOS was fixed

--- a/src/components/Day/Day.scss
+++ b/src/components/Day/Day.scss
@@ -15,10 +15,9 @@
     border-bottom: none;
   }
 
-  // background-color: $defoultBackgroundColor;
-  // border-radius: $defoultBorderRadius;
-
   &__name {
+    margin-bottom: 3px;
+
     text-transform: uppercase;
     font-size: 18px;
     line-height: 12px;
@@ -42,7 +41,10 @@
     font-weight: 500;
 
     display: flex;
-    flex-direction: column;
+  }
+
+  &__temp-arrow {
+    transform: translateX(2px);
   }
 
   &__temp-name {
